ft/src/tui/tests/snapshots/capture_var_prompt_80x24.snap
---
source: ft/src/tui/tests/synthesis.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth section                                                 │
│  c     create ┌ capture · create · var · 2026-05-10-meeting.m┐               │
│  C     create │                                              │               │
│  t     open to│▏ topic = █                                   │               │
│  p     periodi│                                              │               │
│  ?     show th│                                              │               │
│  Esc   close o│ Enter confirm   Ctrl+W delete word   Esc canc│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
