ft/src/tui/tests/snapshots/default_layout_five_tabs_80x24.snap
---
source: ft/src/tui/tests/mod.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search                     
> node where path = ""; expand where edge.kind in {directory-contains, note-link
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│    D /                                                                       │
│press / to edit query                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Graph           not yet refreshed      mode: normal
