ft/src/tui/tests/snapshots/edit_popup_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│ ── overdu┌ edit task ─────────────────────────────────────────────┐          │
│▶   !!  Pa│                                                        │          │
│    !   Re│  description : Pay rent│                               │          │
│ ── upcomi│          due : 2026-05-08                              │          │
│        Re│    scheduled :                                         │          │
│    !!  Su│     priority : high                                    │orrow     │
│    v   Bu│         tags :                                         │          │
│          │   recurrence :                                         │          │
│          │                                                        │          │
│          │  Tab/Shift+Tab next · Ctrl+S save · Esc cancel         │          │
│          │                                                        │          │
│          │                                                        │          │
│          │                                                        │          │
│          └────────────────────────────────────────────────────────┘          │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
