ft/src/tui/tests/snapshots/edit_popup_error_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│ ── overdu┌ edit task ─────────────────────────────────────────────┐          │
│▶   !!  Pa│                                                        │          │
│    !   Re│  description : Pay rent                                │          │
│ ── upcomi│          due : not-a-date│                             │          │
│        Re│    scheduled :                                         │          │
│    !!  Su│     priority : high                                    │orrow     │
│    v   Bu│         tags :                                         │          │
│          │   recurrence :                                         │          │
│          │                                                        │          │
│          │  ⚠ due: could not parse `not-a-date` as a date (try YYY│          │
│          │                                                        │          │
│          │                                                        │          │
│          │                                                        │          │
│          └────────────────────────────────────────────────────────┘          │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
