ft/src/tui/tests/snapshots/git_leader_80x24.snap
---
source: ft/src/tui/tests/git.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Gather  │  7 T
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth section                                                 │
│  c     create note ┌ git · pick an action ──────────────┐                    │
│  C     create note │                                    │                    │
│  t     open today's│  s     sync (commit + pull + push) │                    │
│  p     periodic not│  c     commit (local only, no pull/│                    │
│  ?     show this he│  Esc   cancel                      │                    │
│  Esc   close overla│                                    │                    │
│                    │                                    │                    │
│                    └────────────────────────────────────┘                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed         mode: git
