ft/src/tui/tests/snapshots/graph_create_filename_prompt_80x24.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> node where path = ""; expand where edge.kind in {directory-contains, note-link
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│▶   D /                                                                       │
│press / to edit query                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│               ┌ create · 2/2 filename · . ───────────────────┐               │
│               │▏ filename: █                                 │               │
│               │                                              │               │
│               │ Enter commit   Esc back   Ctrl+W delete word │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph            Enter:confirm  Esc:cance  modal: create
