ft/src/tui/tests/snapshots/graph_move_target_banner_80x24.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
Move 1 selection(s): navigate to target directory, Enter/m to confirm, t for pic
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│▼   D /                                                                       │
│  ▶   D Areas/                                                                │
│  ▶   D Projects/                                                             │
│      N root                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph            m:use-selected-as-source    modal: move
