ft/src/tui/tests/snapshots/graph_periodic_leader_80x24.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> node where path = ""; expand where edge.kind in {directory-contains, note-link
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│    D /                                                                       │
│press / to edit query                                                         │
│                                                                              │
│                       ┌ periodic note · pick a period┐                       │
│                       │                              │                       │
│                       │  d     daily                 │                       │
│                       │  w     weekly                │                       │
│                       │  m     monthly               │                       │
│                       │  q     quarterly             │                       │
│                       │  y     yearly                │                       │
│                       │  Esc   cancel                │                       │
│                       │                              │                       │
│                       └──────────────────────────────┘                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Graph           not yet refreshed   modal: periodic-
