ft/src/tui/tests/snapshots/graph_rename_note_modal_80x24.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> node where path = ""; expand where edge.kind in {directory-contains, note-link
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│▼   D /                                                                       │
│  ▶   D Areas/                                                                │
│  ▶   D Projects/                                                             │
│      N root                                                                  │
│                                                                              │
│               Rename note                                                    │
│               root                                                           │
│               Enter: commit · Esc: discard                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph            Enter:commit  Esc:cancel  modal: rename
