ft/src/tui/tests/snapshots/graph_tab_ghosts_ranked_counts_80x24.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> node where kind in {Ghost};                                                   
 1: node where kind in …                                                        
┌ node where kind in … ────────────────────────────────────────────────────────┐
│    G busy (3)                                                                │
│    G quiet (1)                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph                not yet refreshed      mode: normal
